--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Hello Worlds</h1>
 
     <h1>Hosting the dummy project</h1>
 </body>
